--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -106,9 +106,9 @@
     pdfjsLib.GlobalWorkerOptions.workerSrc =
       'https://cdnjs.cloudflare.com/ajax/libs/pdf.js/2.14.305/pdf.worker.min.js';
 
-    // Config / state
+    // Config / state  --my change
     const url = 'History_Climate.pdf';
-    let pdfDoc = null, pageNum = 1, totalPages = 0;
+    let pdfDoc = null, pageNum = 2, totalPages = 0;
     let scale = 1.0; // logical (CSS) scale
     let originalPageWidth = null, originalPageHeight = null;
     let initialZoomApplied = false;
@@ -241,19 +241,19 @@
       totalPagesSpan.textContent = `/ ${totalPages}`;
       renderPage(pageNum);
 
-      // TOC entries (your original pages)
+      // TOC entries (your original pages)  -- my change
       const tocEntries = [
-        { title: 'Введение', page: 3 },
-        { title: 'Глава 1. Климат и история', page: 5 },
-        { title: 'Глава 2. Эти таинственные шумеры', page: 37 },
-        { title: 'Глава 3. Убейдцы и шумеры', page: 71 },
-        { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 110 },
-        { title: 'Глава 5. Войны номов', page: 132 },
-        { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 150 },
-        { title: 'Глава 7. Возвышение Ура и появление амореев', page: 166 },
-        { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 193 },
-        { title: 'Глава 9. Коллапс бронзового века', page: 218 },
-        { title: 'Глава 10. Современные изменения климата', page: 254 }
+        { title: 'Введение', page: 2 },
+        { title: 'Глава 1. Климат и история', page: 4 },
+        { title: 'Глава 2. Эти таинственные шумеры', page: 36 },
+        { title: 'Глава 3. Убейдцы и шумеры', page: 70 },
+        { title: 'Глава 4. Конец периода Джемдет-Наср.', page: 109 },
+        { title: 'Глава 5. Войны номов', page: 131 },
+        { title: 'Глава 6. Расцвет и гибель Аккадского царства', page: 149 },
+        { title: 'Глава 7. Возвышение Ура и появление амореев', page: 165 },
+        { title: 'Глава 8. Ближний Восток в ХVI-ХIV веках до н. э.', page: 192 },
+        { title: 'Глава 9. Коллапс бронзового века', page: 217 },
+        { title: 'Глава 10. Современные изменения климата', page: 253 }
       ];
       for (const entry of tocEntries) {
         const opt = document.createElement('option');
@@ -266,16 +266,16 @@
       hideOverlayOnce();
     });
 
-    // Nav handlers
-    document.getElementById('first').addEventListener('click', () => { pageNum = 1; renderPage(pageNum); });
-    document.getElementById('prev').addEventListener('click',  () => { if (pageNum > 1) { pageNum--; renderPage(pageNum); } });
+    // Nav handlers  -- my change
+    document.getElementById('first').addEventListener('click', () => { pageNum = 2; renderPage(pageNum); });
+    document.getElementById('prev').addEventListener('click',  () => { if (pageNum > 2) { pageNum--; renderPage(pageNum); } });
     document.getElementById('next').addEventListener('click',  () => { if (pageNum < totalPages) { pageNum++; renderPage(pageNum); } });
     document.getElementById('last').addEventListener('click',  () => { pageNum = totalPages; renderPage(pageNum); });
 
-    // Page direct jump
+    // Page direct jump  --my change
     pageInput.addEventListener('change', () => {
       const p = parseInt(pageInput.value, 10);
-      if (!isNaN(p) && p >= 1 && p <= totalPages) { pageNum = p; renderPage(pageNum); }
+      if (!isNaN(p) && p >= 2 && p <= totalPages) { pageNum = p-1; renderPage(pageNum); }
       else { pageInput.value = pageNum; }
     });
 
@@ -323,15 +323,15 @@
     // Home
     document.getElementById('home').addEventListener('click', () => { window.location.href = '../../index.html'; });
 
-    // TOC jump
+    // TOC jump -- my change
     tocSelect.addEventListener('change', function() {
       const p = parseInt(this.value, 10);
-      if (!isNaN(p)) { pageNum = p; renderPage(pageNum); }
+      if (!isNaN(p)) { pageNum = p-1; renderPage(pageNum); }
     });
 
-    // Keyboard nav
+    // Keyboard nav  -- my change
     document.addEventListener('keydown', function(e) {
-      if (e.key === 'ArrowLeft' || e.key === 'PageUp')   { if (pageNum > 1)         { pageNum--; renderPage(pageNum); } }
+      if (e.key === 'ArrowLeft' || e.key === 'PageUp')   { if (pageNum > 2)         { pageNum--; renderPage(pageNum); } }
       if (e.key === 'ArrowRight' || e.key === 'PageDown'){ if (pageNum < totalPages){ pageNum++; renderPage(pageNum); } }
     });
 
@@ -357,4 +357,3 @@
   </script>
 </body>
 </html>
-
