--- a/books/HistoryClimate/read.html
+++ b/books/HistoryClimate/read.html
@@ -67,11 +67,17 @@
 
   <div class="toolbar">
     <span class="nav-group">
-      <button id="first" title="В начало">⏮</button>
+            <button id="first" title="В начало">⏮</button>
       <button id="prev"  title="Предыдущая">◀</button>
       <button id="next"  title="Следующая">▶</button>
       <button id="last"  title="В конец">⏭</button>
-    </span><span style="flex:1"></span>
+
+    </span>
+
+    <span>Стр. <input id="page" type="number" min="1" value="1" style="width:70px" /></span>
+    <span id="total-pages"></span>
+
+    <span style="flex:1"></span>
 
     <button id="fitPage" title="Подогнать по ширине">Во всю страницу</button>
 
@@ -113,8 +119,8 @@
     // Elements
     const canvas = document.getElementById('pdf-canvas');
     const ctx = canvas.getContext('2d');
-    const pageInput = { set value(_) {}, set max(_) {}, addEventListener() {} };
-    const totalPagesSpan = { set textContent(_) {} };
+    const pageInput = document.getElementById('page');
+    const totalPagesSpan = document.getElementById('total-pages');
     const tocSelect = document.getElementById('toc');
     const zoomSlider = document.getElementById('zoomSlider');
     const zoomLabel = document.getElementById('zoomLabel');
